<resources>
    <string name="picture">Picture</string>
    <string name="description_info">Info</string>
    <string name="request_permission">This sample needs camera permission.</string>
    <string name="camera_error">This device doesn\'t support Camera2 API.</string>
    <string name="avnn">Average of all NN intervals</string>
    <string name="sdnn">Standard deviation of all NN intervals</string>
    <string name="rmssd">Square root of the mean of the squares of differences between adjacent NN intervals</string>
    <string name="pnn50">Percentage of differences between adjacent NN intervals that are greater than 50 ms</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="search">search</string>
    <string name="tab_icon">tab_icon</string>
    <string name="messenger_s_image">messenger_image</string>
    <string name="invite_friends">Invite</string>
    <string name="my_balance">Balance</string>
    <string name="settings">Settings</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="faq">faq</string>
    <string name="about">About</string>
    <string name="sign_out">Signout</string>
    <string name="user_profile_picture">user_image</string>
    <string name="hint_user_name">username</string>
    <string name="enter_your_phone_number">Phone no</string>
    <string name="key_sip_title">Sip</string>
    <string name="edit">Edit</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_settings">Settings</string>
    <string name="one">One</string>
    <string name="two">Two</string>
    <string name="three">Three</string>
    <string name="licenceDetails">
        This program is free software: you can redistribute it and or modify
it under the terms of the GNU General Public License as published by
the Free Software Foundation, either version 3 of the License, or
(at your option) any later version.\n\n

This program is distributed in the hope that it will be useful,
but WITHOUT ANY WARRANTY; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
GNU General Public License for more details.
You should have received a copy of the GNU General Public License
along with this program. If not, see www.gnu.org/licenses/.</string>
    <string name="licenceDetails1">
          Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at\n\n

http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software distributed under
the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND,
either express or implied. See the License for the specific language governing
permissions and limitations under the License.</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string-array name="graph_mealType" translatable="false">
        <item>All Meal</item>
        <item>@string/dialog_add_type_1</item>
        <item>@string/dialog_add_type_2</item>
        <item>@string/dialog_add_type_3</item>
        <item>@string/dialog_add_type_4</item>
        <item>@string/dialog_add_type_5</item>
        <item>@string/dialog_add_type_6</item>
        <item>@string/dialog_add_type_8</item>
        <item>@string/dialog_add_type_12</item>
    </string-array>
    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="reading_ok">OK</string>
    <string name="reading_hypo">Hypoglycemia</string>
    <string name="reading_low">Low</string>
    <string name="reading_high">High</string>
    <string name="reading_hyper">Hyperglycemia</string>
    <string name="type_ok">Normal</string>
    <string name="type_hypo">Hypoglycemia</string>
    <string name="type_low">Low Blood Glucose</string>
    <string name="type_high">High Blood Glucose</string>
    <string name="type_hyper">Hyperglycemia</string>
    <string name="fragment_overview_last_reading">Last check:</string>
    <string name="fragment_overview_trend">Trend over past month:</string>
    <string name="fragment_overview_trend_positive">in range and healthy</string>
    <string name="fragment_overview_selector_month">Month</string>
    <string name="fragment_overview_selector_day">Week</string>
    <string name="fragment_overview_selector_week">Day</string>
    <string name="spinner_title">Measured</string>
    <string name="tab_tips">Health Advice</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_navigation">Navigation</string>
    <string name="dialog_add_title">Add Blood Glucose Level</string>
    <string name="dialog_add_concentration">Concentration</string>
    <string name="dialog_add_concentration_um" translatable="false">mmol/L</string>
    <string name="dialog_add_date">Date</string>
    <string name="dialog_add_time">Time</string>
    <string name="dialog_add_measured">When Measured</string>
    <string name="dialog_add_type_1">Before breakfast</string>
    <string name="dialog_add_type_2">After breakfast</string>
    <string name="dialog_add_type_3">Before lunch</string>
    <string name="dialog_add_type_4">After lunch</string>
    <string name="dialog_add_type_5">Before dinner</string>
    <string name="dialog_add_type_6">After dinner</string>
    <string name="dialog_add_type_7">Snack</string>
    <string name="dialog_add_type_8">Bedtime</string>
    <string name="dialog_add_type_9">Before sleep</string>
    <string name="dialog_add_type_10">Fasting glucose</string>
    <string name="dialog_add_type_11">Recheck</string>
    <string name="dialog_add_type_12">Other</string>
    <string-array name="dialog_add_measured_list" translatable="false">
        <item>@string/dialog_add_type_1</item>
        <item>@string/dialog_add_type_2</item>
        <item>@string/dialog_add_type_3</item>
        <item>@string/dialog_add_type_4</item>
        <item>@string/dialog_add_type_5</item>
        <item>@string/dialog_add_type_6</item>
        <item>@string/dialog_add_type_8</item>
        <item>@string/dialog_add_type_12</item>
    </string-array>
    <string-array name="graph_item_list" translatable="false">
        <item>Week</item>
        <item>Day</item>
        <item>Month</item>
        <item>All Time</item>
    </string-array>
    <string-array name="unit_item" translatable="false">
        <item>mmol/L</item>
        <item>mg/dL</item>
    </string-array>
    <string-array name="unit_item_list" translatable="false">
        <item>mg/dl</item>
        <item>mmole/dl</item>
    </string-array>
    <string name="age_unit">Preferred Unit</string>
    <string name="dialog_add_cancel">CANCEL</string>
    <string name="dialog_add_add">ADD</string>
    <string name="dialog_error2">Please enter a valid value.</string>
    <string name="dialog_error">Please fill all the fields.</string>
    <string name="dialog_delete">Delete</string>
    <string name="dialog_edit">Edit</string>
    <string name="dialog_add_custom_type">Custom measurement category</string>
    <string name="title_activity_reminder">Glucose Check Reminder</string>
    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>
    <string name="slide_1_title">Wellcome to</string>
    <string name="data_backup">Data Backup</string>
    <string name="pro_version">Pro Version</string>
    <string name="app_version_key">4.0</string>
    <string name="key_notifications">Notifications</string>
    <string name="key_ringtone">Ringtone</string>
    <string name="key_send_feedback">feedback</string>
    <string name="key_faq">Faq</string>
    <string name="key_privacy">Privacy</string>
    <string name="key_sip">Sip</string>
    <string name="summary_choose_ringtone">Choose Ringtone</string>
    <string name="key_low_data_mode">Low data mood</string>
    <string name="pref_title_notifications">Notifications</string>
    <string name="title_notification">Notification</string>
    <string name="pref_header_app_info">App info</string>
    <string name="summary_support">Support</string>
    <string name="title_send_feedback">Feed back</string>
    <string name="summary_faq">Faq</string>
    <string name="title_faq">Faq</string>
    <string name="key_terms">Terms</string>
    <string name="title_terms">Terms</string>
    <string name="title_version">Version</string>
    <string name="developed_by" translatable="false">Developed By</string>
    <string name="durbin_labs_ltd" translatable="false">Link3 Technologies Limited</string>
    <string name="durbin_labs_web" translatable="false">https://www.link3.net/</string>
    <string name="copyright_text" translatable="false">Copyright @ Link3 Technologies Limited.</string>
    <string name="about_app" translatable="false">Dial will provide the user to connect with the people using phone numbers.\nIt is free and secure. You can use it everywhere. You can even connect with people internationally! Connect however you want. Send a text message, audio call, share a photo, start a video chat, or share any files you want.\nHigh quality group video chat can be possible here!</string>
</resources>