<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mat_bg_color">

<!--    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:paddingStart="8dp"
        android:paddingLeft="8dp"
        android:paddingEnd="8dp"
        android:paddingRight="8dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:title=""
        app:subtitle=""
        app:title="" />-->

    <ScrollView
        android:id="@+id/svAboutDurbin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:fillViewport="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|top"
            android:orientation="vertical">

            <!--<com.flaviofaria.kenburnsview.KenBurnsView
                android:id="@+id/kbv"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:src="@drawable/splash_bg" />-->
            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="112dp"
                android:layout_height="84dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="8dp"
                android:contentDescription="App logo"
                android:src="@mipmap/ic_launcher" />

            <TextView
                android:id="@+id/tvAppName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="4dp"
                android:layout_marginRight="4dp"
                android:gravity="center"
                android:text="@string/app_name"
                android:textColor="@color/black_87_percent"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvVersion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginLeft="4dp"
                android:layout_marginEnd="4dp"
                android:layout_marginRight="4dp"
                android:layout_marginBottom="4dp"
                android:gravity="center"
                android:textColor="@color/black_87_percent"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvDevelopedBy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="4dp"
                android:layout_marginRight="4dp"
                android:gravity="center"
                android:text="@string/developed_by"
                android:textColor="@color/black_87_percent"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tvDurbinLabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginLeft="4dp"
                android:layout_marginEnd="4dp"
                android:layout_marginRight="4dp"
                android:layout_marginBottom="4dp"
                android:gravity="center"
                android:text="@string/durbin_labs_ltd"
                android:textColor="@color/black_87_percent"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginLeft="4dp"
                android:layout_marginEnd="4dp"
                android:layout_marginRight="4dp"
                android:layout_marginBottom="4dp"
                android:autoLink="web"
                android:gravity="center"
                android:text="@string/durbin_labs_web"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvCopyrightTag"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginLeft="4dp"
                android:layout_marginEnd="4dp"
                android:layout_marginRight="4dp"
                android:layout_marginBottom="4dp"
                android:autoLink="web"
                android:gravity="center"
                android:text="@string/copyright_text"
                android:textColor="@color/black_54_percent"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tvAboutDurbinApp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/about_app"
                android:textColor="@color/black_87_percent"
                android:textSize="16sp" />
        </LinearLayout>

    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabSipLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="12dp"
        app:srcCompat="@drawable/ic_account_circle_black_24dp"
        android:visibility="gone"
        tools:visibility="visible"
        app:layout_anchor="@+id/viewpager"
        app:layout_anchorGravity="bottom|right|end"
        app:layout_behavior="com.durbinlabs.ducommcore.utils.ScrollAwareFABBehavior" />
</FrameLayout>